Fixed intro letter spacing

--- a/code/styles/base/_typography.scss
+++ b/code/styles/base/_typography.scss
@@ -31,7 +31,7 @@ h1, %h1 {
   color: $white;
   font-size: $h1-font-size;
   font-weight: 900;
-  letter-spacing: .3rem;
+  letter-spacing: .3em;
   text-transform: uppercase;
 }
 
@@ -98,7 +98,7 @@ a {
   font-family: $heading-font-family;
   font-size: $h1-font-size;
   font-weight: 900;
-  letter-spacing: .3rem;
+  letter-spacing: .3em;
   margin-bottom: $spacing-vertical-sm;
   text-transform: uppercase;
 }
